# hpp-core

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mergify.yml  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  autogen.sh  cmake_uninstall.cmake.in  configure.ac  default.nix  flake.nix  hppCore.pc.cmake  hppCore.pc.in  package.xml  pyproject.toml
doc/: Doxyfile.extra.in  Doxyfile.in  Makefile.am  algorithmicx.sty  architecture-constraint  bernstein-polynoms.tex  collision_constraints.tex  continuous-collision-checking.tex  continuous-validation.tex  explicit-numerical-constraints.tex  footer.html  header.html  hpp.css  hpp.dox.in  kinematic-chain.fig  kinematic-chain.pdf_t  path-optimization.tex  projection.tex  rotation.tex  spline-gradient-based.tex  spline-path.tex  tikz-uml.sty
doc/additionalDoc/: hppCore.h  package.h  package.hh  porting-2.3-to-2.4.hh
doc/main-page/: news.hh  package.hh  porting-notes.hh
doc/pictures/: archi.fig
include/: CMakeLists.txt  Makefile.am  hppBody.h  hppBox.h  hppColPair.h  hppDevice.h  hppPlanner.h  hppPolyhedron.h  hppProblem.h
include/hpp-model/hpp/model/: body.hh
include/hpp/core/: basic-configuration-shooter.hh  bi-rrt-planner.hh  collision-pair.hh  collision-path-validation-report.hh  collision-validation-report.hh  collision-validation.hh  comparison-type.hh  config-projector.hh  config-validation.hh  config-validations.hh  configuration-shooter.hh  connected-component.hh  constraint-set.hh  constraint.hh  container.hh  continuous-collision-checking.hh  continuous-validation.hh  differentiable-function.hh  diffusing-planner.hh  dimt-rrt.hh  discretized-collision-checking.hh  discretized-path-validation.hh  distance-between-objects.hh  distance.hh  dof-extracted-path.hh  dubins-path.hh  edge.hh  equation.hh  explicit-numerical-constraint.hh  explicit-relative-transformation.hh  freeflyer-joint.hh  fwd.hh  hermite-path.hh  inequality.hh  interpolated-path.hh  joint-bound-validation.hh  k-d-tree.hh  kinodynamic-distance.hh  kinodynamic-oriented-path.hh  kinodynamic-path.hh  (+46 more)
include/hpp/core/configuration-shooter/: gaussian.hh  uniform-tpl.hh  uniform-tpl.hxx  uniform.hh
include/hpp/core/continuous-collision-checking/: dichotomy.hh  progressive.hh
include/hpp/core/continuous-validation/: body-pair-collision.hh  dichotomy.hh  initializer.hh  interval-validation.hh  progressive.hh  (+1 more)
include/hppBody/: hppBody.h
include/hppCore/: hppColPair.h  hppPlanner.h  hppProblem.h
include/hppModel/hppModel/: hppBody.h
plugins/: CMakeLists.txt  spline-gradient-based.cc  toppra.cc  toppra.hh
src/: CMakeLists.txt  Makefile.am  astar.hh  basic-configuration-shooter.cc  basic-configuration-shooter.hh  bi-rrt-planner.cc  body.cc  bounding-box.hh  collision-pair.cc  collision-validation.cc  comparison-type.cc  config-projector.cc  config-validations.cc  connected-component-graph.cc  connected-component-graph.hh  connected-component.cc  constraint-set.cc  constraint.cc  continuous-collision-checking.cc  continuous-validation.cc  diffusing-planner.cc  dimt-rrt.cc  discretized-collision-checking.cc  discretized-path-validation.cc  distance-between-objects.cc  dubins-path.cc  dubins.cc  dubins.hh  equation.cc  explicit-numerical-constraint.cc  explicit-relative-transformation.cc  extracted-path.cc  extracted-path.hh  freeflyer-joint.hh  graph-connected-component.cc  graph-connected-component.hh  hermite-path.cc  hppBody.cpp  hppBox.cpp  hppColPair.cpp  (+55 more)
src/configuration-shooter/: gaussian.cc  uniform-tpl.cc  uniform.cc
src/continuous-collision-checking/: body-pair-collision.hh  dichotomy.cc  intervals.hh  path-velocity.hh  progressive.cc
src/continuous-collision-checking/dichotomy/: body-pair-collision.hh
src/continuous-collision-checking/progressive/: body-pair-collision.hh
src/continuous-validation/: body-pair-collision.cc  dichotomy.cc  helper.hh  initializer.cc  intervals.hh  progressive.cc  solid-solid-collision.cc
src/distance/: reeds-shepp.cc  serialization.cc
src/nearest-neighbor/: basic.cc  basic.hh  k-d-tree.cc  k-d-tree.hh  serialization.cc
src/parser/: roadmap-factory.cc
src/path/: hermite.cc  math.hh  spline.cc
src/path-optimization/: collision-constraints-result.hh  config-optimization.cc  gradient-based.cc  linear-constraint.cc  partial-shortcut.cc  partial-spline-path.cc  path-length.cc  quadratic-program.cc  random-shortcut.cc  rs-time-parameterization.cc  simple-shortcut.cc  simple-time-parameterization.cc  spline-gradient-based-abstract.cc  spline-gradient-based.cc
src/path-optimization/reeds-shepp/: piecewise-quadratic.cc  piecewise-quadratic.hh
src/path-optimization/spline-gradient-based/: collision-constraint.hh  cost.hh  eiquadprog_2011.hpp  joint-bounds.hh
src/path-planner/: bi-rrt-star.cc  k-prm-star.cc
src/path-projector/: dichotomy.cc  global.cc  progressive.cc  recursive-hermite.cc
src/path-validation/: discretized-collision-checking.cc  discretized-joint-bound.cc  discretized.cc  no-validation.hh
src/problem-target/: goal-configurations.cc  task-target.cc
src/steering-method/: car-like.cc  constant-curvature.cc  dubins.cc  reeds-shepp.cc  serialization.cc  snibud.cc  spline.cc  steering-kinodynamic.cc  straight.cc
tests/: CMakeLists.txt  configuration-shooters.cc  containers.cc  explicit-relative-transformation.cc  hermite-path.cc  path-projectors.cc  paths.cc  plugin.cc.in  problem.cc  random-numbers.hh  reeds-and-shepp.cc  relative-motion.cc  roadmap-1.cc  spline-path.cc  test-body-pair-collision.cc  test-config-validations.cc  test-configprojector.cc  test-continuous-collision-checking.cc  test-continuous-validation.cc  test-differentiablefunction.cc  test-gradient-based.cc  test-intervals.cc  test-kdTree.cc  test-kdTree.cc.in  test-kinodynamic.cc  test-path-extraction.cc  test-solid-solid-collision.cc  test-spline-gradient-based.cc  time-parameterization.cc  util.hh  utils.hh
tests/data/: empty.urdf
tests/path-projector/: CMakeLists.txt  progressive.cc
tests/plugin-test/: CMakeLists.txt  example.cc
(+51 files in other folders)
