<?xml version='1.0'?>
 <package format='2'>
 <name>hpp-core</name>
 <version>6.0.0</version>
 <description>Implement basic classes for canonical path planning for kinematic chains. </description>

 <maintainer email='hpp@laas.fr'>Joseph Mirabel</maintainer>
 <license>LGPL</license>

 <!-- <url type='website'>https://github.com/humanoid-path-planner/hpp-core </url> -->

 <author>Joseph Mirabel</author>
 <author>Florent Lamiraux et al.</author>

 <buildtool_depend>catkin</buildtool_depend>

 <depend>hpp-pinocchio</depend>
 <depend>hpp-util</depend>
 <depend>hpp-statistics</depend>
 <depend>hpp-constraints</depend>
 <depend>eigen3</depend>
 <depend>urdfdom</depend>
 <depend>coal</depend>
 <depend>proxsuite</depend>

 <test_depend>romeo_description</test_depend>
 </package>
