[build-system]
build-backend = "cmeel.build"
requires = [
  "cmeel-boost ~= 1.83.0",
  "cmeel[build]",
  "hpp-constraints[build]",
  "hpp-pinocchio[build]",
  "hpp-statistics[build]",
  "hpp-util[build]"
]

[project]
dependencies = [
  "cmeel-boost ~= 1.83.0",
  "hpp-constraints",
  "hpp-pinocchio",
  "hpp-statistics",
  "hpp-util"
]
description = "Utility classes for testing (robust) equilibrium of a system in contact with the environment, and other centroidal dynamics methods."
license = "BSD-2-Clause"
name = "hpp-core"
version = "5.2.0"

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-select = ["I", "NPY", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
